add new question

--- a/index.html
+++ b/index.html
@@ -42,6 +42,19 @@
         </div>
       </div>
     </section>
+    <section>
+      <div class="quiz-card">
+        <div class="content">
+          <h2>What is the correct way to initialize a new Git repository?</h2>
+          <button>Show Answer</button>
+          <div class="tags">
+            <span class="tag">#git start</span>
+            <span class="tag">#git init</span>
+            <span class="tag">#git create</span>
+          </div>
+        </div>
+      </div>
+    </section>
     <footer>
       <ul>
         <li><a href="#home">Home</a></li>
