--- a/index.html
+++ b/index.html
@@ -4,52 +4,70 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap"
-      rel="stylesheet"
-    />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
-      integrity="sha384-k6RqeWeci5ZR/Lv4MR0sA0FfDOM0sD0+U4FV7I4bZZF60xKIBf8evMkqdlP3RdS1"
-      crossorigin="anonymous"
-    />
+
     <title>QuizApp</title>
   </head>
   <body>
-    <header role="banner">
+    <header class="title">
       <h1>Quiz App</h1>
     </header>
     <main>
-      <ul class="card-list">
-        <li class="quiz-card">
-          <article aria-labelledby="question1" role="article">
-            <p id="question1">What property flips the axes in flexbox?</p>
-
-            <button>Show Answer</button>
-
-            <ul role="listitem" class="tags">
+      <ul class="card__list">
+        <li>
+          <article class="card">
+            <h2>What property flips the axes in flexbox?</h2>
+            <button class="answer__button">Show Answer</button>
+            <ul class="tag-list">
               <li class="tag">#html</li>
               <li class="tag">#flexbox</li>
               <li class="tag">#css</li>
             </ul>
+            <button class="card__bookmark">
+              <img src="assests/bookmark-icon.svg" />
+            </button>
+          </article>
+        </li>
+        <li>
+          <article class="card">
+            <h2>What property flips the axes in flexbox?</h2>
+            <button class="answer__button">Show Answer</button>
+            <ul class="tag-list">
+              <li class="tag">#html</li>
+              <li class="tag">#flexbox</li>
+              <li class="tag">#css</li>
+            </ul>
+            <button class="card__bookmark">
+              <img src="assests/bookmark-icon.svg" />
+            </button>
+          </article>
+        </li>
+        <li>
+          <article class="card">
+            <h2>What property flips the axes in flexbox?</h2>
+            <button class="answer__button">Show Answer</button>
+            <ul class="tag-list">
+              <li class="tag">#html</li>
+              <li class="tag">#flexbox</li>
+              <li class="tag">#css</li>
+            </ul>
+            <button class="card__bookmark">
+              <img src="assests/bookmark-icon.svg" />
+            </button>
           </article>
         </li>
       </ul>
     </main>
     <footer>
-      <nav aria-label="Main Navigation">
-        <ul role="list">
-          <li role="listitem">
-            <a href="#home" class="active" aria-label="Home">Home </a>
+      <nav class="navigation">
+        <ul class="navigation__list">
+          <li class="list__item">
+            <a href="#home">Home </a>
           </li>
-          <li role="listitem">
-            <a href="#bookmarks" aria-label="Bookmarks">Bookmarks </a>
+          <li class="list__item">
+            <a href="#bookmarks">Bookmarks </a>
           </li>
-          <li role="listitem">
-            <a href="#profile" aria-label="Profile">Profile </a>
+          <li class="list__item">
+            <a href="#profile">Profile </a>
           </li>
         </ul>
       </nav>
