--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     <footer>
       <nav class="navigation">
         <ul class="navigation__list">
-          <li class="list__item">
+          <li class="list__item" active>
             <a href="#home">Home </a>
           </li>
           <li class="list__item">
