--- a/index.html
+++ b/index.html
@@ -4,15 +4,48 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
-
     <title>QuizApp</title>
+    <script src="index.js" defer></script>
   </head>
-  <body>
+  <body data-js="body">
     <header class="title">
       <h1>Quiz App</h1>
+      <button class="mode-toggle" data-js="mode-toggle">
+        <span class="icon" data-js="mode-icon">🌙</span> 
+      </button>
+      </label>
     </header>
+
     <main>
       <ul class="card__list">
+        <li>
+          <article class="card">
+            <h2>What property flips the axes in flexbox?</h2>
+            <button class="answer__button">Show Answer</button>
+            <ul class="tag-list">
+              <li class="tag">#html</li>
+              <li class="tag">#flexbox</li>
+              <li class="tag">#css</li>
+            </ul>
+            <button class="card__bookmark">
+              <img src="assests/bookmark-icon.svg" />
+            </button>
+          </article>
+        </li>
+        <li>
+          <article class="card">
+            <h2>What property flips the axes in flexbox?</h2>
+            <button class="answer__button">Show Answer</button>
+            <ul class="tag-list">
+              <li class="tag">#html</li>
+              <li class="tag">#flexbox</li>
+              <li class="tag">#css</li>
+            </ul>
+            <button class="card__bookmark">
+              <img src="assests/bookmark-icon.svg" />
+            </button>
+          </article>
+        </li>
         <li>
           <article class="card">
             <h2>What property flips the axes in flexbox?</h2>
