--- a/index.html
+++ b/index.html
@@ -11,11 +11,9 @@
     <header class="title">
       <h1>Quiz App</h1>
       <button class="mode-toggle" data-js="mode-toggle">
-        <span class="icon" data-js="mode-icon">🌙</span> 
+        <span class="icon" data-js="mode-icon">🌙</span>
       </button>
-      </label>
     </header>
-
     <main>
       <ul class="card__list">
         <li>
@@ -94,13 +92,13 @@
       <nav class="navigation">
         <ul class="navigation__list">
           <li class="list__item" active>
-            <a href="#home">Home </a>
+            <a href="index.html">Home </a>
           </li>
           <li class="list__item">
             <a href="#bookmarks">Bookmarks </a>
           </li>
           <li class="list__item">
-            <a href="#profile">Profile </a>
+            <a href="profile.html">Profile </a>
           </li>
         </ul>
       </nav>
