--- a/profile.html
+++ b/profile.html
@@ -13,7 +13,7 @@
         <span class="icon" data-js="mode-icon">🌙</span>
       </button>
     </header>
-    <main></main>
+    <main>conent is coming..</main>
     <footer>
       <nav class="navigation">
         <ul class="navigation__list">
