--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="./css/style.css" />
     <title>QuizApp</title>
-    <script src="index.js" defer></script>
+    <script src="./JavaScript/index.js" defer></script>
+    <script src="JavaScript/answer.js" defer></script>
   </head>
   <body data-js="body">
     <header class="title">
@@ -20,69 +21,181 @@
           <article class="card">
             <h2>What property flips the axes in flexbox?</h2>
             <button class="answer__button">Show Answer</button>
+            <p class="answer" style="display: none">
+              The property <code>flex-direction</code> flips the axes in
+              flexbox.
+            </p>
             <ul class="tag-list">
-              <li class="tag">#html</li>
               <li class="tag">#flexbox</li>
               <li class="tag">#css</li>
             </ul>
             <button class="card__bookmark">
-              <img src="assests/bookmark-icon.svg" />
+              <img src="assets/bookmark-icon.svg" />
             </button>
           </article>
         </li>
+
         <li>
           <article class="card">
-            <h2>What property flips the axes in flexbox?</h2>
+            <h2>
+              Which CSS property is used to set the space inside the element's
+              border?
+            </h2>
             <button class="answer__button">Show Answer</button>
+            <p class="answer" style="display: none">
+              The property <code>padding</code> is used to set the space inside
+              the element's border.
+            </p>
             <ul class="tag-list">
-              <li class="tag">#html</li>
-              <li class="tag">#flexbox</li>
               <li class="tag">#css</li>
             </ul>
             <button class="card__bookmark">
-              <img src="assests/bookmark-icon.svg" />
+              <img src="assets/bookmark-icon.svg" />
             </button>
           </article>
         </li>
+
         <li>
           <article class="card">
-            <h2>What property flips the axes in flexbox?</h2>
+            <h2>Which HTML tags are used to create a table?</h2>
             <button class="answer__button">Show Answer</button>
+            <p class="answer" style="display: none">
+              The tags <code>&lt;table&gt;</code>, <code>&lt;tr&gt;</code>,
+              <code>&lt;td&gt;</code>, <code>&lt;thead&gt;</code>,
+              <code>&lt;tbody&gt;</code>, and <code>&lt;tfoot&gt;</code> are
+              used to create a table.
+            </p>
             <ul class="tag-list">
               <li class="tag">#html</li>
-              <li class="tag">#flexbox</li>
-              <li class="tag">#css</li>
             </ul>
             <button class="card__bookmark">
-              <img src="assests/bookmark-icon.svg" />
+              <img src="assets/bookmark-icon.svg" />
             </button>
           </article>
         </li>
+
         <li>
           <article class="card">
-            <h2>What property flips the axes in flexbox?</h2>
+            <h2>Which Flexbox property controls the order of flex items?</h2>
             <button class="answer__button">Show Answer</button>
+            <p class="answer" style="display: none">
+              The property <code>order</code> controls the order of flex items.
+            </p>
             <ul class="tag-list">
-              <li class="tag">#html</li>
               <li class="tag">#flexbox</li>
               <li class="tag">#css</li>
             </ul>
             <button class="card__bookmark">
-              <img src="assests/bookmark-icon.svg" />
+              <img src="assets/bookmark-icon.svg" />
             </button>
           </article>
         </li>
+
         <li>
           <article class="card">
-            <h2>What property flips the axes in flexbox?</h2>
+            <h2>
+              Which CSS property is used to align the text within an element?
+            </h2>
             <button class="answer__button">Show Answer</button>
+            <p class="answer" style="display: none">
+              The property <code>text-align</code> is used to align the text
+              within an element.
+            </p>
             <ul class="tag-list">
-              <li class="tag">#html</li>
-              <li class="tag">#flexbox</li>
               <li class="tag">#css</li>
             </ul>
             <button class="card__bookmark">
-              <img src="assests/bookmark-icon.svg" />
+              <img src="assets/bookmark-icon.svg" />
+            </button>
+          </article>
+        </li>
+
+        <li>
+          <article class="card">
+            <h2>
+              Which HTML attribute is used to define the target URL of a
+              hyperlink?
+            </h2>
+            <button class="answer__button">Show Answer</button>
+            <p class="answer" style="display: none">
+              The attribute <code>href</code> is used to define the target URL
+              of a hyperlink.
+            </p>
+            <ul class="tag-list">
+              <li class="tag">#html</li>
+            </ul>
+            <button class="card__bookmark">
+              <img src="assets/bookmark-icon.svg" />
+            </button>
+          </article>
+        </li>
+
+        <li>
+          <article class="card">
+            <h2>Which CSS property changes the transparency of an element?</h2>
+            <button class="answer__button">Show Answer</button>
+            <p class="answer" style="display: none">
+              The property <code>opacity</code> changes the transparency of an
+              element.
+            </p>
+            <ul class="tag-list">
+              <li class="tag">#css</li>
+            </ul>
+            <button class="card__bookmark">
+              <img src="assets/bookmark-icon.svg" />
+            </button>
+          </article>
+        </li>
+
+        <li>
+          <article class="card">
+            <h2>Which HTML tags are used to create an unordered list?</h2>
+            <button class="answer__button">Show Answer</button>
+            <p class="answer" style="display: none">
+              The tags <code>&lt;ul&gt;</code> and <code>&lt;li&gt;</code> are
+              used to create an unordered list.
+            </p>
+            <ul class="tag-list">
+              <li class="tag">#html</li>
+            </ul>
+            <button class="card__bookmark">
+              <img src="assets/bookmark-icon.svg" />
+            </button>
+          </article>
+        </li>
+
+        <li>
+          <article class="card">
+            <h2>
+              Which CSS property defines the width of an element's border?
+            </h2>
+            <button class="answer__button">Show Answer</button>
+            <p class="answer" style="display: none">
+              The property <code>border-width</code> defines the width of an
+              element's border.
+            </p>
+            <ul class="tag-list">
+              <li class="tag">#css</li>
+            </ul>
+            <button class="card__bookmark">
+              <img src="assets/bookmark-icon.svg" />
+            </button>
+          </article>
+        </li>
+
+        <li>
+          <article class="card">
+            <h2>Which HTML tag is used to embed an image in a document?</h2>
+            <button class="answer__button">Show Answer</button>
+            <p class="answer" style="display: none">
+              The tag <code>&lt;img&gt;</code> is used to embed an image in a
+              document.
+            </p>
+            <ul class="tag-list">
+              <li class="tag">#html</li>
+            </ul>
+            <button class="card__bookmark">
+              <img src="assets/bookmark-icon.svg" />
             </button>
           </article>
         </li>
@@ -98,7 +211,7 @@
             <a href="#bookmarks">Bookmarks </a>
           </li>
           <li class="list__item">
-            <a href="profile.html">Profile </a>
+            <a href="register.html">Profile </a>
           </li>
         </ul>
       </nav>
