add hide and show button

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
               <li class="tag">#css</li>
             </ul>
             <button class="card__bookmark">
-              <img src="assets/bookmark-icon.svg" />
+              <img src="assests/bookmark-icon.svg" />
             </button>
           </article>
         </li>
@@ -50,7 +50,7 @@
               <li class="tag">#css</li>
             </ul>
             <button class="card__bookmark">
-              <img src="assets/bookmark-icon.svg" />
+              <img src="assests/bookmark-icon.svg" />
             </button>
           </article>
         </li>
@@ -69,7 +69,7 @@
               <li class="tag">#html</li>
             </ul>
             <button class="card__bookmark">
-              <img src="assets/bookmark-icon.svg" />
+              <img src="assests/bookmark-icon.svg" />
             </button>
           </article>
         </li>
@@ -86,7 +86,7 @@
               <li class="tag">#css</li>
             </ul>
             <button class="card__bookmark">
-              <img src="assets/bookmark-icon.svg" />
+              <img src="assests/bookmark-icon.svg" />
             </button>
           </article>
         </li>
@@ -105,7 +105,7 @@
               <li class="tag">#css</li>
             </ul>
             <button class="card__bookmark">
-              <img src="assets/bookmark-icon.svg" />
+              <img src="assests/bookmark-icon.svg" />
             </button>
           </article>
         </li>
@@ -125,7 +125,7 @@
               <li class="tag">#html</li>
             </ul>
             <button class="card__bookmark">
-              <img src="assets/bookmark-icon.svg" />
+              <img src="assests/bookmark-icon.svg" />
             </button>
           </article>
         </li>
@@ -142,7 +142,7 @@
               <li class="tag">#css</li>
             </ul>
             <button class="card__bookmark">
-              <img src="assets/bookmark-icon.svg" />
+              <img src="assests/bookmark-icon.svg" />
             </button>
           </article>
         </li>
@@ -159,7 +159,7 @@
               <li class="tag">#html</li>
             </ul>
             <button class="card__bookmark">
-              <img src="assets/bookmark-icon.svg" />
+              <img src="assests/bookmark-icon.svg" />
             </button>
           </article>
         </li>
@@ -178,7 +178,7 @@
               <li class="tag">#css</li>
             </ul>
             <button class="card__bookmark">
-              <img src="assets/bookmark-icon.svg" />
+              <img src="assests/bookmark-icon.svg" />
             </button>
           </article>
         </li>
@@ -195,7 +195,7 @@
               <li class="tag">#html</li>
             </ul>
             <button class="card__bookmark">
-              <img src="assets/bookmark-icon.svg" />
+              <img src="assests/bookmark-icon.svg" />
             </button>
           </article>
         </li>
