add new questions

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./css/style.css" />
     <title>QuizApp</title>
-    <script src="./JavaScript/index.js" defer></script>
+    <script src="./JavaScript/toggle_mode.js" defer></script>
     <script src="JavaScript/answer.js" defer></script>
   </head>
   <body data-js="body">
@@ -199,19 +199,183 @@
             </button>
           </article>
         </li>
+
+        <li>
+          <article class="card">
+            <h2>
+              Which CSS property defines the number of columns in a grid
+              container?
+            </h2>
+            <button class="answer__button">Show Answer</button>
+            <p class="answer" style="display: none">
+              The property <code>grid-template-columns</code> defines the number
+              of columns in a grid container.
+            </p>
+            <ul class="tag-list">
+              <li class="tag">#css</li>
+              <li class="tag">#grid</li>
+            </ul>
+            <button class="card__bookmark">
+              <img src="assests/bookmark-icon.svg" />
+            </button>
+          </article>
+        </li>
+
+        <li>
+          <article class="card">
+            <h2>How do you define a function in JavaScript?</h2>
+            <button class="answer__button">Show Answer</button>
+            <p class="answer" style="display: none">
+              A function in JavaScript can be defined using the
+              <code>function</code> keyword, followed by the name of the
+              function, parentheses <code>()</code>, and a block of code
+              enclosed in curly braces <code>{}</code>.
+            </p>
+            <ul class="tag-list">
+              <li class="tag">#javascript</li>
+              <li class="tag">#function</li>
+            </ul>
+            <button class="card__bookmark">
+              <img src="assests/bookmark-icon.svg" />
+            </button>
+          </article>
+        </li>
+
+        <li>
+          <article class="card">
+            <h2>Which HTML element is used to create a form for user input?</h2>
+            <button class="answer__button">Show Answer</button>
+            <p class="answer" style="display: none">
+              The <code>&lt;form&gt;</code> element is used to create a form for
+              user input in HTML.
+            </p>
+            <ul class="tag-list">
+              <li class="tag">#html</li>
+              <li class="tag">#form</li>
+            </ul>
+            <button class="card__bookmark">
+              <img src="assests/bookmark-icon.svg" />
+            </button>
+          </article>
+        </li>
+
+        <li>
+          <article class="card">
+            <h2>
+              How can you add an event listener to a button in JavaScript?
+            </h2>
+            <button class="answer__button">Show Answer</button>
+            <p class="answer" style="display: none">
+              You can add an event listener to a button using the
+              <code>addEventListener</code> method. Example:
+              <code>button.addEventListener('click', functionName);</code>
+            </p>
+            <ul class="tag-list">
+              <li class="tag">#javascript</li>
+              <li class="tag">#event</li>
+            </ul>
+            <button class="card__bookmark">
+              <img src="assests/bookmark-icon.svg" />
+            </button>
+          </article>
+        </li>
+
+        <li>
+          <article class="card">
+            <h2>
+              What is the difference between class selectors and ID selectors in
+              CSS?
+            </h2>
+            <button class="answer__button">Show Answer</button>
+            <p class="answer" style="display: none">
+              Class selectors are prefixed with a dot <code>.</code> and can be
+              applied to multiple elements. ID selectors are prefixed with a
+              hash <code>#</code> and should be unique within the document.
+            </p>
+            <ul class="tag-list">
+              <li class="tag">#css</li>
+              <li class="tag">#selectors</li>
+            </ul>
+            <button class="card__bookmark">
+              <img src="assests/bookmark-icon.svg" />
+            </button>
+          </article>
+        </li>
+
+        <li>
+          <article class="card">
+            <h2>
+              How do you add an element to the end of an array in JavaScript?
+            </h2>
+            <button class="answer__button">Show Answer</button>
+            <p class="answer" style="display: none">
+              You can add an element to the end of an array using the
+              <code>push</code> method. Example:
+              <code>array.push(element);</code>
+            </p>
+            <ul class="tag-list">
+              <li class="tag">#javascript</li>
+              <li class="tag">#array</li>
+            </ul>
+            <button class="card__bookmark">
+              <img src="assests/bookmark-icon.svg" />
+            </button>
+          </article>
+        </li>
+
+        <li>
+          <article class="card">
+            <h2>What is the purpose of a media query in CSS?</h2>
+            <button class="answer__button">Show Answer</button>
+            <p class="answer" style="display: none">
+              A media query allows the application of CSS rules based on the
+              characteristics of the device, such as screen size, orientation,
+              and resolution.
+            </p>
+            <ul class="tag-list">
+              <li class="tag">#css</li>
+              <li class="tag">#media-query</li>
+            </ul>
+            <button class="card__bookmark">
+              <img src="assests/bookmark-icon.svg" />
+            </button>
+          </article>
+        </li>
+
+        <li>
+          <article class="card">
+            <h2>
+              How do you change the text content of an HTML element using
+              JavaScript?
+            </h2>
+            <button class="answer__button">Show Answer</button>
+            <p class="answer" style="display: none">
+              You can change the text content of an HTML element using the
+              <code>textContent</code> property. Example:
+              <code>element.textContent = "New Text";</code>
+            </p>
+            <ul class="tag-list">
+              <li class="tag">#javascript</li>
+              <li class="tag">#dom</li>
+            </ul>
+            <button class="card__bookmark">
+              <img src="assests/bookmark-icon.svg" />
+            </button>
+          </article>
+        </li>
       </ul>
     </main>
     <footer>
       <nav class="navigation">
         <ul class="navigation__list">
           <li class="list__item" active>
-            <a href="index.html">Home </a>
+            <a href="index.html">Home</a>
           </li>
           <li class="list__item">
-            <a href="#bookmarks">Bookmarks </a>
+            <a href="#bookmarks">Bookmarks</a>
           </li>
           <li class="list__item">
-            <a href="register.html">Profile </a>
+            <a href="profile.html">Profile</a>
           </li>
         </ul>
       </nav>
