--- a/profile.html
+++ b/profile.html
@@ -17,19 +17,12 @@
     </header>
     <main class="profile">
       <section class="profile-header">
-        <img
-          src="assets/user-avatar.png"
-          alt="User Avatar"
-          class="profile-avatar"
-        />
+        <img src="" alt="User Avatar" class="profile-avatar" />
         <h2>Wladimir Schkulov</h2>
       </section>
       <section class="profile-info">
         <h3>About me</h3>
-        <p class="about-me-text">
-          I am a passionate web developer with a love for learning new
-          technologies and building creative projects.
-        </p>
+        <p class="about-me-text">lorem ipsum...</p>
       </section>
     </main>
     <footer>
